--- a/02-Intro-HTML/CentroTeam/index_centroTeam.html
+++ b/02-Intro-HTML/CentroTeam/index_centroTeam.html
@@ -2,6 +2,7 @@
 <html lan="es">
     <head>
         <title>Centro Comunitario   </title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <!-- Dentro de body esta todo el contenido mostrado al usuario -->
      <body>
