--- a/02-Intro-HTML/CentroInd/index_centroC.html
+++ b/02-Intro-HTML/CentroInd/index_centroC.html
@@ -10,6 +10,8 @@
 <html lang="es">
 <head>
     <title>Centro Comunitario Oceania</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./edificio.png" type="image/x-icon">
 </head>
 <body>
     <h1>Centro Comunitario Oceania</h1>
@@ -17,7 +19,12 @@
     <ul>
         <li>Lunes a Viernes 9:00 - 17:00</li>
         <li>Sabado 9:00 - 15:00</li>
+
     </ul>
+    <table>
+        <caption>Horarios</caption>
+
+    </table>
     <a href="https://pilares.cdmx.gob.mx/" target="_blank">¡Conce mas aquí!</a>
     <Div id="Testimonios">
         <h2>Testimonios</h2>
