--- a/04-html-avanzado/enlaces/pagina.html
+++ b/04-html-avanzado/enlaces/pagina.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hola</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hola karla</h1>
+    <h1>Hola</h1>
     <div class="tenor-gif-embed" data-postid="24408873" data-share-method="host" data-aspect-ratio="0.940625" data-width="20%"><a href="https://tenor.com/view/hello-gif-24408873">Hello Sticker</a>from <a href="https://tenor.com/search/hello-stickers">Hello Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+    <button type="button"><a href="./index.html">Home</a></button>
 </body>
 </html>
